--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -3,5 +3,6 @@ flask-login==0.4.1
 flask-migrate==2.3.1
 flask-sqlalchemy==2.3.2
 flask-wtf==0.14.2
+flask-mail
 psycopg2==2.7.6.1
 gunicorn==19.9.0
