--- a/docker-compose-app.yml
+++ b/docker-compose-app.yml
@@ -13,7 +13,7 @@ services:
    - 8000
   ports:
    - 8000:8000
-  command: /bin/bash start.sh
+  command: gunicorn main:app -w 2 -b 0.0.0.0:8000 --timeout 1200 --reload
   volumes:
     - ./app:/usr/src/app
   depends_on:
