added copy-secrets to Makefile, hardcoded in volume name to compose file

--- a/docker-compose-app.yml
+++ b/docker-compose-app.yml
@@ -29,7 +29,7 @@ services:
   ports:
    - 9999:5432
   volumes:
-   - ${newsinequalityproject_app}:/var/lib/postgresql/data
+   - newsinequalityproject_app:/var/lib/postgresql/data
   networks:
    - webnet
  nginx:
@@ -51,4 +51,4 @@ networks:
  webnet:
 
 volumes:
-  ${newsinequalityproject_app}:
+  newsinequalityproject_app:
