added blog folder to .gitignore and removed .env from same

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 __pycache__
-*.env
+*/__pycache__/*
 originals
 *.pyc
-*.env
 config/.secrets-*
 app/migrations/*
 app/*/static/blog/*
+app/app/templates/blog/*
